appId: com.zaimimran.almari
# UC-F11-04
---
- runFlow: ../lib/sample-closet.yaml
- tapOn:
    id: "header-profile"
- assertVisible:
    id: "profile"
- scrollUntilVisible:
    element: "Language"
- tapOn: "Language"
- tapOn: "Norsk bokmål"
- assertVisible: "Profil"
- assertVisible:
    id: "profile"
- runFlow:
    when:
      notVisible: "Følg telefonen"
    commands:
      - tapOn: "Språk.*"
- tapOn: "Følg telefonen"
